Add column source metadata and improve guidance

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -25,6 +25,16 @@
         <a href="#" id="manageLink">Manage tables</a>
       </section>
       <p class="status" id="status"></p>
+      <section class="manual">
+        <h2>Manual</h2>
+        <ol>
+          <li>Open a data table on any website and press <kbd>Alt</kbd> while clicking a cell to capture it.</li>
+          <li>Give the column a name, then save it to the selected output table.</li>
+          <li>Repeat on other pages to map additional columns. Each saved column remembers its source URL.</li>
+          <li>Return here, enter the dates you need, and export the assembled CSV.</li>
+        </ol>
+        <p class="tip">Need to adjust mappings? Use the “Manage tables” link to review selectors and URLs.</p>
+      </section>
     </main>
     <script src="popup.js"></script>
   </body>
